--- a/lab2/index.html
+++ b/lab2/index.html
@@ -7,7 +7,7 @@
     <title>RGU Homepage</title>
 </head>
 <body>
-<--START OF HEADER -->
+<!--START OF HEADER -->
 <header>
         <div id="quicklinks">
             <ul>
@@ -32,39 +32,87 @@
             <li><a href="#">Future Students</a></li>
             <li><a href="#">Student life</a></li>
             <li><a href="#">Alumni & Giving</a></li>
-            <li><a href ="#">Research</a></li>
-            <li><a href ="#">Business Service</a></li>
-            <li><a href ="#">News & Events</a></li>
+            <li><a href="#">Research</a></li>
+            <li><a href="#">Business Service</a></li>
+            <li><a href="#">News & Events</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
 </header>
-<!-- END OF HEADER>
-<--START OF MAIN -->
+<!-- END OF HEADER -->
+<!--START OF MAIN -->
 <main>
     <section>
       <h2> Search our Courses</h2>
         <form>
-            <input
+            <input type="text" name="keywordbox" value="Enter Keyword">
+            <select>
+                <option value="compsci">Computer Science</option>
+                <option value="digmed">Digital Media</option>
+                <option value="network">Computer Network Management and Design</option>
+                <option value="other">Other</option>
+            </select>
+            <input type="submit" value="saerch">
         </form>
 
+        <ul>
+            <li>Achiteture, Construction & Surveying</li>
+            <li>Business, Management & Accounting</li>
+            <li>Engineering</li>
+            <li>Information Communication & Media</li>
+            <li>Law</li>
+            <li>Art & Design</li>
+            <li>Computingf</li>
+            <li>Health Professions</li>
+            <li>Laboratory Biomedical & Sport Sciences</li>
+            <li>Social Work & Social Sciences</li>
+        </ul>
     </section>
 
     <section>
-
+        <img src="advertbanner.png" alt="Top UK University for Graduate Employment - HESA Destination of UK
+    Leavers Survey 2013/14. Published by HESA 2015"/>
     </section>
 
     <section>
+<!-- Article 1-->
+        <article>
+            <h3> Postgraduate Open Evening</h3>
+            <img src="newsarticle1.png" alt="Postgraduate Student Talking">
+            <p>Register to attend and find out more about our wide portfolio of flexible postgraduate courses.
+            </p>
+        </article>
 
+        <!-- Article 2-->
+        <article>
+            <h3>Visit Us</h3>
+            <img src="newsarticle2.png" alt="Sir Ian Wood Building">
+            <p>Your Chance to visit our superb facilities & learn about student life.</p>
+        </article>
+
+        <!-- Article 3-->
+        <article>
+            <h3>International Students</h3>
+            <img src="newsarticle3.png" alt="Students deep in thought">
+            <p>Information for the future international students.</p>
+        </article>
     </section>
 
 </main>
-<--END OF MAIN -->
-<--START OF FOOTER -->
+<!--END OF MAIN -->
+<!--START OF FOOTER -->
 <footer>
-
+<h2>Connect With Us</h2>
+    <ul>
+        <li><a href="http://www.facebook.com"><img src="facebooklogo.png" alt="Facebook"></a></li>
+        <li><a href="http://www.twitter.com"><img src="twitterlogo.png" alt="Twitter"></a></li>
+        <li><a href="http://www.youtube.com"><img src="youtubelogo.png" alt="Youtube"></a></li>
+        <li><a href="http://www.googleplus.com"><img src="googlepluslogo.png" alt="Googleplus"></a></li>
+        <li><a href="http://www.pintrest.com"><img src="pintrestlogo.png" alt="Pintrest"></a></li>
+        <li><a href="http://www.instagram.com"><img src="instagramlogo.png" alt="Instagram"></a></li>
+        </ul>
 </footer>
-<--END OF HEADER -->
+<!--END OF HEADER -->
 </body>
 </html>
 
